crates/wdl-engine/tests/workflows/callstack/error.txt
error: task execution failed for task `my_task`: process terminated with non-zero exit code 1
   ┌─ tests/workflows/callstack/first.wdl:3:6
   │
 3 │ task my_task {
   │      ^^^^^^^ this task failed to execute
   │
   ┌─ tests/workflows/callstack/first.wdl:17:5
   │
17 │     call my_task {
   │     ---- called from this location
   │
   ┌─ tests/workflows/callstack/second.wdl:6:5
   │
 6 │     call first.test
   │     ---- called from this location
   │
   ┌─ tests/workflows/callstack/source.wdl:6:5
   │
 6 │     call second.test
   │     ---- called from this location

